Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
 
 - task: SonarCloudPrepare@1
   inputs:
-    SonarCloud: 'Test'
+    SonarCloud: 'TestSonarCloud'
     organization: 'sahanaumesh'
     scannerMode: 'CLI'
     configMode: 'manual'
