Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,8 +26,8 @@ steps:
     organization: 'sahanaumesh07'
     scannerMode: 'CLI'
     configMode: 'manual'
-    cliProjectKey: 'Sonarcloudtest'
-    cliProjectName: 'sahanaumesh07'
+    cliProjectKey: 'Test17'
+    cliProjectName: 'sahanasu93'
     cliSources: '.'
 
 - task: SonarCloudAnalyze@1
